--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ETH Real Time Chart</title>
+		<title>ETH/USD Realtime</title>
+		<link rel="manifest" href="site.webmanifest" />
+		<link rel="apple-touch-icon" href="ico/apple-touch-icon.png" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -14,25 +16,27 @@
 		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-dark px-5">
-			<span class="text-capitalize text-monospace"><a class="navbar-brand text-light" href="/">Chart</a></span>
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-		</nav>
-		<div class="container-fluid mt-2">
-			<div id="latest" class="text-center animate__animated">
-				<h1><span class="value">0</span></h1>
+		<div>
+			<nav class="navbar navbar-expand-lg navbar-light bg-dark px-5">
+				<span class="text-capitalize text-monospace"><a class="navbar-brand text-light" href="/">Chart</a></span>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-toggle="collapse"
+					data-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+			</nav>
+			<div class="mt-2">
+				<div id="latest" class="text-center animate__animated">
+					<h1><span class="value">0</span></h1>
+				</div>
+				<div id="chart"></div>
 			</div>
-			<div id="chart"></div>
 		</div>
 	</body>
 	<script>
@@ -46,6 +50,7 @@
 			if (repsonse.ok) {
 				return repsonse.json();
 			} else {
+				console.log("error");
 				const message = `An error has occured: ${response.status}`;
 				throw new Error(message);
 			}
@@ -54,31 +59,33 @@
 		const drawChart = async () => {
 			let data = await fetchData();
 			let trace = {
-				x: data.index,
+				// Convert to client time
+				x: data.index.map((t) => new Date(t)),
 				y: data.price,
 				type: "scatter",
 				mode: "lines+markers",
 				marker: { color: "blue", size: 3 },
 			};
 			let layout = {
-				title: "Ehereum/USD",
+				title: "ETH/USD",
 				xaxis: {
-					title: "Time",
+					// title: "Time",
 					showgrid: true,
 				},
 				yaxis: {
-					title: "USD",
+					// title: "USD",
 					showline: true,
 				},
 			};
 			let series = [trace];
 			Plotly.plot("chart", series, layout);
 		};
-		let cnt = 0;
 
 		const updateChart = () => {
 			fetchData()
 				.then((data) => {
+					// let title = document.querySelector("title").prepend(`${latestPrice} `);
+					// console.log(title.textContent);
 					let latestPriceElm = document.querySelector("#latest");
 					latestPriceElm.classList.remove("animate__fadeIn");
 					let totalPoints = parseInt(data.price.length);
@@ -91,19 +98,25 @@
 						lineColor = "green";
 						latestPriceElm.classList.remove("text-danger");
 						latestPriceElm.classList.add("text-success");
+						document.querySelector("title").innerText = `📈 ${latestPrice.toFixed(2)} ETH/USD Realtime`;
 					} else {
 						lineColor = "pink";
 						latestPriceElm.classList.remove("text-success");
 						latestPriceElm.classList.add("text-danger");
+						document.querySelector("title").innerText = `📉 ${latestPrice.toFixed(2)} ETH/USD Realtime`;
 					}
 
 					latestPriceElm.innerHTML = `<h1><span class="currency mr-1">$</span><span class="value">${latestPrice.toFixed(2)}</span></h1>`;
 					let style = {
-						x: [data.index],
+						// Convert to client time
+						x: [data.index.map((t) => new Date(t))],
 						y: [data.price],
-						marker: { color: lineColor, size: 2 },
+						marker: { color: lineColor, size: 3 },
 					};
-					Plotly.restyle("chart", style);
+					// Delay to fetch data
+					setTimeout(function () {
+						Plotly.restyle("chart", style);
+					}, 500 * 60);
 				})
 				.catch((e) => {
 					console.log(e);
@@ -113,6 +126,6 @@
 		updateChart();
 		setInterval(() => {
 			updateChart();
-		}, 1000 * 60);
+		}, 500 * 60);
 	</script>
 </html>
