--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				x: data.index.map((t) => new Date(t)),
 				y: data.price,
 				type: "scatter",
-				mode: "lines+markers",
+				mode: "lines",
 				marker: { color: "blue", size: 3 },
 			};
 			let layout = {
