--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ETH-USD Realtime</title>
-		<link rel="manifest" href="site.webmanifest" />
-		<link rel="apple-touch-icon" href="ico/apple-touch-icon.png" />
+		<link rel="manifest" href="/src/site.webmanifest" />
+		<link rel="apple-touch-icon" href="/src/ico/apple-touch-icon.png" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -16,22 +17,12 @@
 		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	</head>
 	<body>
-		<div>
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<span class="text-capitalize text-monospace ps-3"><a class="navbar-brand text-primary fw-bold" href="/">ETH Chart</a></span>
-			</nav>
-			<div class="mt-2">
-				<div class="d-flex justify-content-center">
-					<div id="latest">
-						<h5 class="value animate__animated animate__flash animate__slow">Loading ...</h5>
-					</div>
-				</div>
-				<div class="d-flex justify-content-center">
-					<div id="fluctuation"></div>
-				</div>
-				<div id="chart" class="p-0 m-0"></div>
-			</div>
-		</div>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<span class="text-capitalize text-monospace ps-3">
+				<a class="navbar-brand text-primary fw-bold" href="/"> <img src="/src/ico/eth-logo.png" /> ETH Chart</a>
+			</span>
+		</nav>
+		<div id="root"></div>
 		<footer class="footer">
 			<div class="container">
 				<span class="text-muted">
@@ -39,104 +30,6 @@
 				</span>
 			</div>
 		</footer>
+		<script type="module" src="/src/App.jsx"></script>
 	</body>
-	<script>
-		const fetchData = async () => {
-			let repsonse = await fetch("https://us-central1-techika.cloudfunctions.net/crypto", {
-				headers: {
-					"Content-Type": "application/json",
-					Accept: "application/json",
-				},
-			});
-			if (!repsonse.ok) {
-				const message = `An error has occured: ${response.status}`;
-				throw new Error(message);
-			}
-			return repsonse.json();
-		};
-
-		const initChart = async () => {
-			let data = await fetchData();
-			updateInfo(data);
-			let trace = {
-				// Convert to client time
-				x: data.index.map((t) => new Date(t)),
-				y: data.price,
-				type: "scatter",
-				mode: "lines",
-				marker: { color: "blue", size: 3 },
-			};
-			let layout = {
-				title: "ETH/USD",
-				xaxis: {
-					// title: "Time",
-					showgrid: true,
-				},
-				yaxis: {
-					// title: "USD",
-					showline: true,
-				},
-			};
-			let series = [trace];
-			Plotly.plot("chart", series, layout);
-		};
-
-		const updateInfo = (data) => {
-			let priceValues = [];
-			data.price.forEach((p) => {
-				priceValues.push(parseFloat(p));
-			});
-			let trend = true;
-			let latestPriceElm = document.querySelector("#latest");
-			let fluctuationElm = document.querySelector("#fluctuation");
-			let currentPrice;
-			if (latestPriceElm.querySelector("h1 span.value")) currentPrice = parseFloat(latestPriceElm.querySelector("h1 span.value").textContent);
-			else currentPrice = 0;
-			let totalPoints = parseInt(data.price.length);
-			let latestPrice = parseFloat(data.price[totalPoints - 1]);
-			let min = Math.min.apply(Math, priceValues);
-			let max = Math.max.apply(Math, priceValues);
-			let fluctuation = max - min;
-			let percentagefluctuation = ((fluctuation / min) * 100).toFixed(2);
-			let fluctuationClass = fluctuation > 0 ? "text-success" : "text-danger";
-			fluctuationElm.innerHTML = `<h6>Fluctuation (12h):<span class="ms-2 value ${fluctuationClass}">${
-				fluctuation > 0 ? "+" : "-"
-			} ${percentagefluctuation} %</span></h6>`;
-			latestPriceElm.innerHTML = `<h1 class="align-middle">
-				<span class="currency mr-1">$</span><span class="value">${latestPrice.toFixed(2)}</span></h1>`;
-			latestPriceElm.classList.remove("animate__fadeIn");
-			let lineColor;
-			latestPriceElm.classList.add("animate__fadeIn");
-			if (latestPrice > currentPrice) {
-				latestPriceElm.classList.remove("text-danger");
-				latestPriceElm.classList.add("text-success");
-				document.querySelector("title").innerText = `📈 ${latestPrice.toFixed(2)} USD/ETH Realtime`;
-			} else {
-				trend = false;
-				latestPriceElm.classList.remove("text-success");
-				latestPriceElm.classList.add("text-danger");
-				document.querySelector("title").innerText = `📉 ${latestPrice.toFixed(2)} USD/ETH Realtime`;
-			}
-			return trend;
-		};
-		const updateChart = async () => {
-			let data = await fetchData();
-			/**
-			 ** The returned Promise [array] object may not be resolved  so we need to explicitly resolve them
-			 ** Source: https://stackoverflow.com/a/56851570/183846
-			 */
-			let trend = updateInfo(data);
-			let style = {
-				// Convert to client time
-				x: [data.index.map((t) => new Date(t))],
-				y: [data.price],
-				marker: { color: [trend] ? "green" : "pink", size: 3 },
-			};
-			Plotly.restyle("chart", style);
-		};
-		initChart();
-		setInterval(() => {
-			updateChart();
-		}, 1000 * 60);
-	</script>
 </html>
