--- a/index.html
+++ b/index.html
@@ -13,23 +13,12 @@
 			integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<span class="text-capitalize text-monospace ps-3">
-				<a class="navbar-brand text-primary fw-bold" href="/"> <img src="/src/ico/eth-logo.png" /> ETH Chart</a>
-			</span>
-		</nav>
 		<div id="root"></div>
-		<footer class="footer">
-			<div class="container">
-				<span class="text-muted">
-					<p class="text-center">2021 Made with 🧡&nbsp; by <a href="https://twitter.com/infantiablue">Truong Phan</a>.</p>
-				</span>
-			</div>
-		</footer>
 		<script type="module" src="/src/App.jsx"></script>
 	</body>
 </html>
