--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ETH-USD Realtime</title>
-		<link rel="manifest" href="/src/site.webmanifest" />
-		<link rel="apple-touch-icon" href="/src/ico/apple-touch-icon.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="apple-touch-icon" href="/ico/apple-touch-icon.png" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
